--- a/inventory/group_vars/EnterpriseDC2Leaves.yml
+++ b/inventory/group_vars/EnterpriseDC2Leaves.yml
@@ -25,7 +25,7 @@ l3leaf:
       - 'graceful-restart'
     spanning_tree_mode: mstp
   node_groups:
-    ENT DC2 LEAF DOMAIN 1:
+    EnterpriseDC2LeafDomain1:
       bgp_as: 65201
       nodes:
         ENT-DC2-LEAF1:
@@ -40,7 +40,7 @@ l3leaf:
           uplink_switch_interfaces: ['Ethernet2/1', 'Ethernet2/1']
           filter:
             tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_1 ]
-    ENT DC2 LEAF DOMAIN 2:
+    EnterpriseDC2LeafDomain2:
       bgp_as: 65202
       nodes:
         ENT-DC2-LEAF3:
@@ -55,7 +55,7 @@ l3leaf:
           uplink_switch_interfaces: ['Ethernet4/1', 'Ethernet4/1']
           filter:
             tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_2 ]
-#    ENT DC2 LEAF DOMAIN 3:
+#    EnterpriseDC2LeafDomain3:
 #      bgp_as: 65203
 #      nodes:
 #        ENT-DC2-LEAF5:
@@ -70,7 +70,7 @@ l3leaf:
 #          uplink_switch_interfaces: ['Ethernet6/1', 'Ethernet6/1']
 #          filter:
 #            tags: [ GLOBAL_LEAVES, DC2_COMPUTE_LEAVES, DC2_LEAF_DOMAIN_3 ]
-    ENT DC2 EDGE LEAVES:
+    EnterpriseDC2EdgeLeaves:
       bgp_as: 65216
       evpn_gateway:
         evpn_l2:
